src/test/ui/parser/new-unicode-escapes-2.stderr
error: overlong unicode escape (must have at most 6 hex digits)
  --> $DIR/new-unicode-escapes-2.rs:2:14
   |
LL |     let s = "\u{260311111111}";
   |              ^^^^^^^^^^^^^^^^

error: aborting due to previous error

